--- a/snap-bootstrap.html
+++ b/snap-bootstrap.html
@@ -34,9 +34,9 @@
 
 		</div>
 		<div class="container">
-			<div class="row">
+			<div class="row py-3">
 
-				<div class="card col-md-3">
+				<div class="card col-md-2.5 mx-3">
 				<h5 class="card-header">Card 1</h5>
 
 
@@ -45,7 +45,7 @@
 
 				</div>
 
-				<div class="card col-md-3">
+				<div class="card col-md-2.5 mx-3">
 					<h5 class="card-header">Card 2</h5>
 
 
@@ -54,7 +54,7 @@
 
 				</div>
 
-				<div class="card col-md-3">
+				<div class="card col-md-2.5 mx-3">
 					<h5 class="card-header">Card 3</h5>
 
 
@@ -62,7 +62,7 @@
 				<h5 class="card-text"></h5>
 
 				</div>
-					<div class="card col-md-3">
+					<div class="card col-md-2.5 mx-3">
 						<h5 class="card-header">Card 4</h5>
 
 
